--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "image-size": "^1.0.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "merge-base64": "^1.0.4",
     "next": "^13.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
